# Portfolio

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
controllers/: time_calculator.py
core/: db.py  security.py
errors/: error_handler.py  error_schema.py
models/: __init__.py  auth.py  certificate.py  education.py  person.py  response_schema.py  skills.py  user.py  work_experience.py
routers/: auth.py  certificate.py  education.py  person.py  skill.py  work_experience.py
tests/: auth_helper.py  conftest.py  mongodb_test.py  test_auth.py  test_certificate.py  test_education.py  test_person.py  test_skill.py  test_work.py
